--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -74,92 +74,92 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 	  </p>
 
 	  <p Class="Asking">
-	    Asking price: $------
+	    Asking price: $435,000
 	  </p>
 	  <table class="about">
 	    <tr>
 		  <td class="property">Prop Type:</td>
-		  <td>---</td>
+		  <td>Freehold</td>
 		  <td class="property"> # of Rooms</td>
-		  <td></td>
+		  <td>12</td>
 		</tr>
 	    <tr>
 		  <td class="property">Type/Style:</td>
-		  <td>---</td>
+		  <td>Detached</td>
 		  <td class="property"> # of Bedrooms</td>
-		  <td></td>
+		  <td>6</td>
 		</tr>
 	    <tr>
 		  <td class="property">District:</td>
-		  <td>---</td>
+		  <td>Hamilton W</td>
 		  <td class="property">Zoning:</td>
 		  <td></td>
 		</tr>
 	    <tr>
 		  <td class="property">Near:</td>
-		  <td>---</td>
-		  <td class="property">Baths 2-pieces:</td>
-		  <td>---</td>
+		  <td>Whitney Ave/Lower Horning</td>
+		  <td class="property">Baths 1-pieces:</td>
+		  <td>4</td>
 		</tr>
 	    <tr>
-		  <td class="property">Legal:</td>
-		  <td>---</td>
-		  <td class="property">Baths 3-pieces:</td>
-		  <td>---</td>
+		  <td class="property"></td>
+		  <td></td>
+		  <td class="property">Baths 2-pieces:</td>
+		  <td>3</td>
 		</tr>
 	  </table>	  
 	  <h2> Rooms and Sizes </h2>
 	  <table class="sizes">
 	    <tr>
-		  <td class="property">Living:</td>
-		  <td>---</td>
-		  <td class="property">Bedroom 1:</td>
-		  <td>---</td>
+		  <td class="property">Living (1):</td>
+		  <td>12’ x21’ combined</td>
+		  <td class="property">Bedroom 1 (1):</td>
+		  <td>10’-6” x 11’-6”</td>
 		</tr>
 	    <tr>
-		  <td class="property">Dining:</td>
-		  <td>---</td>
-		  <td class="property">Bedroom 2:</td>
-		  <td>---</td>
+		  <td class="property">Dining (1):</td>
+		  <td>12’ x21’ combined</td>
+		  <td class="property">Bedroom 2 (1):</td>
+		  <td>10’-6” x 11’</td>
 		</tr> 
 	    <tr>
-		  <td class="property">Kitchen:</td>
-		  <td>---</td>
-		  <td class="property">Bedroom 3:</td>
-		  <td>---</td>
+		  <td class="property">Kitchen (1):</td>
+		  <td>9’ x 10’-8”</td>
+		  <td class="property">Bedroom 3 (B):</td>
+		  <td>10’ x 11’</td>
 		</tr> 
 	    <tr>
 		  <td class="property">Bathroom 1:</td>
 		  <td>---</td>
-		  <td class="property">Bedroom 4:</td>
-		  <td>---</td>
+		  <td class="property">Bedroom 4 (B):</td>
+		  <td>10’ x 9’-6”</td>
 		</tr>
 	    <tr>
-		  <td class="property">Bathroom 2:</td>
+		  <td class="property">Bathroom 2 (B):</td>
 		  <td>---</td>
-		  <td class="property">Bedroom 5:</td>
-		  <td>---</td>
+		  <td class="property">Bedroom 5 (B):</td>
+		  <td>9’ x 10’</td>
 		</tr> 
 	    <tr>
 		  <td class="property"></td>
 		  <td></td>
-		  <td class="property">Bedroom 6:</td>
-		  <td>---</td>
+		  <td class="property">Bedroom 6 (B):</td>
+		  <td>9’ x 9’6”</td>
 		</tr> 
 	  </table>
 	  <h2 class="property">Property Details</h2>
 	  <table class="details">
 	    <tr>
 		  <td class="property">UFFI:</td>
-		  <td>---</td>
+		  <td>Unknown</td>
 		  <td class="property">Lot Size:</td>
-		  <td>---</td>
+		  <td>43’ x 100’</td>
 		  <td class="property">Fireplaces:</td>
-		  <td>---</td>
+		  <td>None</td>
 		</tr> 
 	    <tr>
 		  <td class="property">Taxes:</td>
-		  <td>---</td>
+		  <td>$3496.96</td>
 		  <td class="property">Property Size:</td>
 		  <td>---</td>
 		  <td class="property"></td>
@@ -167,66 +167,68 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 		</tr>
 	    <tr>
 		  <td class="property">Type of Ownership:</td>
-		  <td>---</td>
+		  <td>Freehold</td>
 		  <td class="property">Basement:</td>
-		  <td>---</td>
+		  <td>Fully Finished</td>
 		  <td class="property">Heating:</td>
-		  <td>---</td>
+		  <td>Forced Air</td>
 		</tr>
 	    <tr>
 		  <td class="property">Parking:</td>
-		  <td>---</td>
+		  <td>5</td>
 		  <td class="property"></td>
 		  <td></td>
 		  <td class="property">Fuel:</td>
-		  <td>---</td>
+		  <td>Natural Gas</td>
 		</tr>
 		  <td class="property">Rental Eqmt:</td>
-		  <td>---</td>
+		  <td>None</td>
 		  <td class="property"></td>
 		  <td></td>
 		  <td class="property">Water Supply:</td>
-		  <td>---</td>
+		  <td>Municipal</td>
 		</tr>
 		  <td class="property">Exterior/Const:</td>
-		  <td>---</td>
+		  <td>Vinyl Siding</td>
 		  <td class="property"></td>
 		  <td></td>
 		  <td class="property">Water Meter:</td>
-		  <td>---</td>
+		  <td>Yes</td>
 		</tr>
 		  <td class="property">Topography:</td>
-		  <td>---</td>
+		  <td>Level</td>
 		  <td class="property"></td>
 		  <td></td>
 		  <td class="property">Sewer Type:</td>
-		  <td>---</td>
+		  <td>Connected</td>
 		</tr>
 		  <td class="property">Restrictions:</td>
 		  <td>---</td>
 		  <td class="property">Waterfront:</td>
-		  <td>N</td>
+		  <td>No</td>
 		  <td class="property">Pool:</td>
-		  <td>N</td>
+		  <td>None</td>
 		</tr>
 		  <td class="property">Foundation:</td>
-		  <td>---</td>
+		  <td>Block</td>
 		  <td class="property"></td>
 		  <td></td>
 		  <td class="property">Frontage:</td>
-		  <td>---</td>
+		  <td>South</td>
 		</tr>
 		  <td class="property">School:</td>
 		  <td>McMaster University</td>
 		  <td class="property">Survey Avail:</td>
-		  <td></td>
+		  <td>No</td>
 		  <td class="property">Amps:</td>
-		  <td>---</td>
+		  <td>100</td>
 		</tr>
 	  </table>
 	  
 	  <h2> Contact Information</h2>
-	  
+	  <h3>Shailesh Garg</h3>
+	  <p>garg_shailesh@yahoo.ca</P>
+	  <p>(416) 871-1432</P>
 	  
 	</div>
 
