--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -28,14 +28,14 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 	  <h1>31 Beaucourt Rd.  </h1>
 	  <div class="gallery">
 			<div class="slider">
-				<input type="radio" name="slide_switch" id="id1"/>
+				<input type="radio" name="slide_switch" id="id1 checked="checked"/>
 				<label for="id1">
 					<img src="Images/1.JPG" width="100"/>
 				</label>
 				<img src="Images/1.JPG"/>
 				
 				<!--Lets show the second image by default on page load-->
-				<input type="radio" name="slide_switch" id="id2" checked="checked"/>
+				<input type="radio" name="slide_switch" id="id2""/>
 				<label for="id2">
 					<img src="Images/2.JPG" width="100"/>
 				</label>
