--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -256,7 +256,7 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 	  
 	  <h2> Contact Information</h2>
 	  <h3>Shailesh Garg</h3>
-	  <p>garg_shailesh@yahoo.ca</P>
+	  <p>garg_shailesh@yahoo.com</P>
 	  <p>(416) 871-1432</P>
 	  
 	</div>
