--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Prakhar Garg | About Me</title>
-<link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
-<link href="index.css" rel="stylesheet" type="text/css">
+<!--<link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
+--><link href="index.css" rel="stylesheet" type="text/css">
 <link href="SharedElements.css" rel="stylesheet" type="text/css">
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+
+<link href="HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
+<script src="HorizontalMenuBar/index.js"></script>
+
+
 <!-- 
 To learn more about the conditional comments around the html tags at the top of the file:
 paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
@@ -26,10 +31,10 @@ Do the following if you're using your customized build of modernizr (http://www.
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script src="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/respond.min.js"></script>
-<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+<!--<script src="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/respond.min.js"></script>
+--><script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
-<body>
+<body onload='addMenubar()'>
 <!--
 <h1 style="	position:fixed;
 			bottom: 0; 
@@ -41,77 +46,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 	This website is currently under construction
 </h1>
 -->
-<div class="Menu">
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-		<a href="index.html">
-			Home
-		</a>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
-		<ul>
-			<li><a href="Interests/Origami/index.html">
-				Origami
-			</a></li>
-			<li><a href="Interests/Travelling/index.html">
-				Travelling
-			</a></li>
-			<li><a href="Interests/Robots/index.html">
-				Robots
-			</a></li>
-			<li><a href="Interests/Photography/index.html">
-				Photography
-			</a></li>
-			</ul>
-	</li>
-	<li><a class="MenuBarItemSubmenu" href="#Work" >Employment</a>
-		<ul>
-			<li><a href="Work/CAPREIT/index.html">
-				CAPREIT
-			</a></li>
-			<li><a href="Work/CTWorkshop/index.html">
-				Children's Technology Workshop
-			</a></li>
-		</ul>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
-      <ul>
-		<li><a href="Projects/EcoCAR/index.html">
-			McMaster EcoCar3
-		</a></li>
-		<li><a href="Projects/FormulaHybrid/index.html">
-			McMaster Formula Hybrid
-		</a></li>
-        <li><a href="Projects/Strangers/index.html">
-			Strangers App
-		</a></li>	
-		<li><a href="Projects/QuadSim/index.html">
-			QuadSIM
-		</a></li>	
-		<li><a href="Projects/SumoBot/index.html">
-			SumoBot
-		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
-          <ul>
-            <li><a href="Projects/FIRST/index.html#2009">Blizzard X</a></li>
-            <li><a href="Projects/FIRST/index.html#2010">Blizzard XI</a></li>
-            <li><a href="Projects/FIRST/index.html#2011">Blizzard XII</a></li>
-            <li><a href="Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
-          </ul>
-        </li>
-        <li><a href="Projects/VEX/index.html">
-			VEX Robotics
-		</a></li>
-        <li><a href="Projects/F1/index.html">
-				F1 in Schools
-		</a></li>
-        <li><a href="Projects/Skills/index.html">Skills Robotics</a></li>
 
-      </ul>
-    </li>
-    <li><a href="Contact/index.html">Contact</a></li>
-  </ul>
-</div>
 <div name="AboutMe" class="Block" id="AboutMe">
 <div id="AboutMeText">
   <div class="Title"><h1> About Me </h1></div>
