--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -14,94 +14,12 @@
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<!-- 
-To learn more about the conditional comments around the html tags at the top of the file:
-paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
 
-Do the following if you're using your customized build of modernizr (http://www.modernizr.com/):
-* insert the link to your js here
-* remove the link below to the html5shiv
-* add the "no-js" class to the html tags at the top
-* you can also remove the link to respond.min.js if you included the MQ Polyfill in your modernizr build 
--->
-<!--[if lt IE 9]>
-<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<script src="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/respond.min.js"></script>
-<script src="../../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+<link href="../../HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
+<script src="../../HorizontalMenuBar/index.js"></script>
+
 </head>
-<body>
-<div class="Menu">
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-		<a href="../../index.html">
-			Home
-		</a>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Interest" >Interests</a>
-		<ul>
-			<li><a href="../../Interests/Origami/index.html">
-				Origami
-			</a></li>
-			<li><a href="../../Interests/Travelling/index.html">
-				Travelling
-			</a></li>
-			<li><a href="../../Interests/Robots/index.html">
-				Robots
-			</a></li>
-			<li><a href="../../Interests/Photography/index.html">
-				Photography
-			</a></li>
-			</ul>
-	</li>
-	<li><a class="MenuBarItemSubmenu" href="../../index.html#Work" >Employment</a>
-		<ul>
-			<li><a href="../../Work/CAPREIT/index.html">
-				CAPREIT
-			</a></li>
-			<li><a href="../../Work/CTWorkshop/index.html">
-				Children's Technology Workshop
-			</a></li>
-		</ul>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Project">Projects</a>
-      <ul>
-		<li><a href="../../Projects/EcoCAR/index.html">
-			McMaster EcoCar3
-		</a></li>
-		<li><a href="../../Projects/FormulaHybrid/index.html">
-			McMaster Formula Hybrid
-		</a></li>
-        <li><a href="../../Projects/Strangers/index.html">
-			Strangers App
-		</a></li>	
-		<li><a href="../../Projects/QuadSim/index.html">
-			QuadSIM
-		</a></li>	
-		<li><a href="../../Projects/SumoBot/index.html">
-			SumoBot
-		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="../../Projects/FIRST/index.html">FIRST Robotics</a>
-          <ul>
-            <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
-          </ul>
-        </li>
-        <li><a href="../../Projects/VEX/index.html">
-			VEX Robotics
-		</a></li>
-        <li><a href="../../Projects/F1/index.html">
-				F1 in Schools
-		</a></li>
-        <li><a href="../../Projects/Skills/index.html">Skills Robotics</a></li>
-
-      </ul>
-    </li>
-    <li><a href="../../Contact/index.html">Contact</a></li>
-  </ul>
-</div>
+<body onload='addMenubar()'>
 
 <div id="FIRST" class="Block">
 	<h1>FIRST Robotics Competition</h1>
