--- a/Work/CTWorkshop/index.html
+++ b/Work/CTWorkshop/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Prakhar Garg | Class Projects</title>
+<title>Prakhar Garg | CTWorkshop</title>
 <link href="../../SharedElements.css" rel="stylesheet" type="text/css">
 
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
@@ -24,79 +24,6 @@
 </head>
 <body onload='addMenubar()'>
 
-<!--
-<div class="Menu">
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-		<a href="../../index.html">
-			Home
-		</a>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Interest" >Interests</a>
-		<ul>
-			<li><a href="../../Interests/Origami/index.html">
-				Origami
-			</a></li>
-			<li><a href="../../Interests/Travelling/index.html">
-				Travelling
-			</a></li>
-			<li><a href="../../Interests/Robots/index.html">
-				Robots
-			</a></li>
-			<li><a href="../../Interests/Photography/index.html">
-				Photography
-			</a></li>
-			</ul>
-	</li>
-	<li><a class="MenuBarItemSubmenu" href="../../index.html#Work" >Employment</a>
-		<ul>
-			<li><a href="../../Work/CAPREIT/index.html">
-				CAPREIT
-			</a></li>
-			<li><a href="../../Work/CTWorkshop/index.html">
-				Children's Technology Workshop
-			</a></li>
-		</ul>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Project">Projects</a>
-      <ul>
-		<li><a href="../../Projects/EcoCAR/index.html">
-			McMaster EcoCar3
-		</a></li>
-		<li><a href="../../Projects/FormulaHybrid/index.html">
-			McMaster Formula Hybrid
-		</a></li>
-        <li><a href="../../Projects/Strangers/index.html">
-			Strangers App
-		</a></li>	
-		<li><a href="../../Projects/QuadSim/index.html">
-			QuadSIM
-		</a></li>	
-		<li><a href="../../Projects/SumoBot/index.html">
-			SumoBot
-		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="../../Projects/FIRST/index.html">FIRST Robotics</a>
-          <ul>
-            <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
-          </ul>
-        </li>
-        <li><a href="../../Projects/VEX/index.html">
-			VEX Robotics
-		</a></li>
-        <li><a href="../../Projects/F1/index.html">
-				F1 in Schools
-		</a></li>
-        <li><a href="../../Projects/Skills/index.html">Skills Robotics</a></li>
-
-      </ul>
-    </li>
-    <li><a href="../../Contact/index.html">Contact</a></li>
-  </ul>
-</div>
--->
 <div class="Block" id="TopBLock">
   <h1>Children's Technology Workshop</h1>
   <h3>Summer - 2012, 2013</h3>
@@ -107,8 +34,14 @@
 			<h2>Job Description</h2>
 			<ul>
 				<li>Plans, develops, leads and evaluates a variety of camp programs.</li>
-				<li>Organizes, implements and oversees activities and events according to the timetable and curriculum provided.</li>
-				<li>Takes action to deal with incidents, problems and emergencies and parent concerns in accordance with camp policy.</li>
+				<li>
+					Organizes, implements and oversees activities and events according 
+					to the timetable and curriculum provided.
+				</li>
+				<li>
+					Takes action to deal with incidents, problems and emergencies and
+					parent concerns in accordance with camp policy.
+				</li>
 				<li>Serve as a positive role model to the campers.</li>
 				<li>responsible for the well being of all the campers and coworkers.</li>
 				<li>Maintain regular commnication about the camp's progress with the parents and the supervisor.</li>
@@ -126,14 +59,20 @@
 		        <div class="Goals">
 			<h2>Goals, Success Factors</h2>
 			<ul>
-				<li>Ability to manage 24 kids</li>
-				<li>Ensure the happyness of every camper</li>
+				<li>Ability to manage compeeting deadlines</li>
+				<li>Ensure sontinuous improvement and documentation of product</li>
 			</ul>
         </div>
 		<div class="Reflection">
 			<h2>Reflection</h2>
 			<p>
-				As my first real job, this was a great experience. I enjoyed working with the children and found great pleasure in sharing my passion for technology with them. I learned a lot about raking responsibility and resolving conflicts. 
+				I am responsible for assisting the IT Support staff with any necessary task. 
+				This usually involves repairing broken computers and printers, disposing of 
+				old machines, and assisting in upgrading machines at CAPREIT's regional sites. 
+				One of my biggest accomplishment this year was to be able take calls and 
+				actively help users over the phone. this was a great experience because it 
+				helped me enhance my communication skills. I became more comfortable talking 
+				to strangers and immediately helping them out. 
 			</p>
 		</div>
 	</div>
