--- a/Work/THALES/index.html
+++ b/Work/THALES/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Prakhar Garg | CAPREIT</title>
+<title>Prakhar Garg | THALES</title>
 <link href="../../SharedElements.css" rel="stylesheet" type="text/css">
 
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
@@ -23,28 +23,27 @@
 </head>
 <body onload='addMenubar()'>
 
-
 <div class="Block" id="TopBlock">
-  <h1>CAPREIT (Canadian Appartment Properties Realestate Investment Trust)</h1>
-  <h3>Summer - 2013, 2014</h3>
+  <h1>THALES Canada</h1>
+  <h3>2016</h3>
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Logo.gif"></p></div>
         <div class="Description">
 			<h2>Job Description</h2>
 			<ul>
-				<li>Imaging and customizing PC’s and laptops</li>
-				<li>Support head office users for printer supplies</li>
-				<li>Inventory documentation and reconciliation</li>
-				<li>Help Desk support calls</li>
-				<li>Other duties as may be assigned</li>
+				<li>Work with a team to automate the testing of the conpany's trains.</li>
+				<li>Debelop, maintain and debug the Automated Testing software using C++</li>
+				<li>Design and develop a new web based solution to manage the autinated test procedures</li>
+				<li>Train teaters on using the web based tedsting and local automating playform</li>
+				<li>Work with the isers to take feedback and continue improving the automated testing</li>
 			</ul>
         </div>
 		<div class="KSA">
 			<h2>Knowledge, Skills and Abilities</h2>
 			<ul>
-				<li>Strong PC skills</li>
-				<li>Good analytical skills</li>
-				<li>Good interpersonal skills</li>
+				<li>Knowledge of the software debelopment process</li>
+				<li>Experience working with and troubleshooting c++ and JavaScript.</li>
+				<li>Excillent comunication and organisational skills</li>
 			</ul>
         </div>
 		        <div class="Goals">
@@ -52,12 +51,16 @@
 			<ul>
 				<li>Completion of assigned tasks in a timely manner</li>
 				<li>Ability to manage competing deadlines</li>
+				<li>Creating designing an untuative UX for the automation process</li>
 			</ul>
         </div>
 		<div class="Reflection">
 			<h2>Reflection</h2>
 			<p>
-				I am responsible for assisting the IT Support staff with any necessary task. This usually involves repairing broken computers and printers, disposing of old machines, and assisting in upgrading machines at CAPREIT's regional sites. One of my biggest accomplishment this year was to be able take calls and actively help users over the phone. this was a great experience because it helped me enhance my communication skills. I became more comfortable talking to strangers and immediately helping them out. 
+				Working at THALS was an amazing experience. Working in the Research and Development department,
+				I have learned a lot about how large firms begin new software projects and what goes into mintaining 
+				prexisting software.
+			
 			</p>
 		</div>
 	</div>
