--- a/Projects/Hyperloop incomplete/index.html
+++ b/Projects/Hyperloop incomplete/index.html
@@ -44,31 +44,28 @@
 	<div id="LayoutDiv2">
 		<div id="NudgeMe" class="Image">
 			<p>
-				<img src="11174923_10200597563339225_3579215265931089820_n.jpg" width="682">
+				<img src="noseconeStress.jpg" width="682">
 			</p>
 		</div>
 		<div class="Paragraph">
 			<P>
-				My primary role on the team was to design and render the team's our proposed Hyperloop Pod.
-				During the competition my promary aim was to ensure that all the subsystems were able to
-				efficiently work with each other as well as fit into the limited dimensions specified provided by
-				the organisers. Part of my job involved analysing conponents to determine how they would perform
+				My primary role on the team was to design and render the team's proposed Hyperloop Pod.
+				A part of my job was to ensure that all the parts and subsystems has suffecient space.
+				Furthermore I had to ensire that none of the moving components would interfear with each
+				other and what safety measures would be in place to prevent it. The most dificult challenge was to 
+				add all the features the team wanted in the dimensions specified provided by
+				the organisers while ensuring theere was suffecient space for the passengers to be confortably seated.
+				Part of my job involved analysing conponents to determine how they would perform
 				with various amounts of stress and strain. This was done using the 
 				<a href="http://www.autodesk.com/products/inventor/features/simulation-visualization/stress-analysis">
 				stress analysis</a> tools provided in <a href="http://www.autodesk.com/products/inventor/overview">
 				Autodesk Inventor</a>.
 			</P>
 		</div>
-		<div class="Paragraph">
-			<P>
-				I furthermore assisted with the logistics and organisation of the team. 
-			</P>
-		</div>
-		
-		
+
 		
 		<div class="document">
-			<object data="file:///D:/GIT/website/Projects/Hyperloop%20incomplete/Pod_Competition_final_design__mcmaster_hyperloop_team.pdf" type="application/pdf" width="100%" height="400px">
+			<object data="file:Pod_Competition_final_design__mcmaster_hyperloop_team.pdf" type="application/pdf" width="100%" height="400px">
  
 			  <p>It appears you don't have a PDF plugin for this browser.
 			  No biggie... you can <a href="myfile.pdf">click here to
