--- a/Work/THALES/index.html
+++ b/Work/THALES/index.html
@@ -25,17 +25,19 @@
 
 <div class="Block" id="TopBlock">
   <h1>THALES Canada</h1>
-  <h3>2016</h3>
+  <h3>2016-2017</h3>
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Logo.gif"></p></div>
         <div class="Description">
 			<h2>Job Description</h2>
 			<ul>
-				<li>Work with a team to automate the testing of the conpany's trains.</li>
-				<li>Debelop, maintain and debug the Automated Testing software using C++</li>
-				<li>Design and develop a new web based solution to manage the autinated test procedures</li>
-				<li>Train teaters on using the web based tedsting and local automating playform</li>
-				<li>Work with the isers to take feedback and continue improving the automated testing</li>
+				<li>Worked in an exclusive team tasked to reduce product testing times by 80%</li>
+				<li>Work with a team to develop tools and practices to automate software system and subsystem level tests for automated trains.</li>
+				<li>Develop, maintain and debug the Automated Testing software using C++</li>
+				<li>Design and develop a new graphincal, web based solution to generate automated test procedures</li>
+				<li>Train teaters on how to use Automted Testing Tools</li>
+				<li>Work with the users to take feedback and continue improving the automated testing</li>
+				<li>Accurately document all changes to sotware while following company procedure</li>
 			</ul>
         </div>
 		<div class="KSA">
@@ -43,6 +45,7 @@
 			<ul>
 				<li>Knowledge of the software debelopment process</li>
 				<li>Experience working with and troubleshooting c++ and JavaScript.</li>
+				<li></li>
 				<li>Excillent comunication and organisational skills</li>
 			</ul>
         </div>
