--- a/index.html
+++ b/index.html
@@ -60,21 +60,29 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div name="Work" class="Block" id="Work">
   <div class="Title"><h1>Work Experience</h1></div>
   <div class="Section">
-    <a href="Work/CAPREIT/index.html" class="Attribute">
-      <h2>
-        CAPREIT
-      </h2>
-      <img src="Work/CAPREIT/Logo.jpg">
-
-    </a>
-    <a href="Work/CTWorkshop/index.html" class="Attribute">
-      <h2>
-        Children's Technology <br> Workshop
-      </h2>
-      <img src="Work/CTWorkshop/Logo.png">
-    </a>
-  </div>
-  
+      <div class="Section">
+          <a href="Work/THALES/index.html" class="Attribute">
+            <h2>
+              THALES<br>Transportation Canada
+            </h2>
+            <img src="Work/THALES/Logo.jpg">
+          </a>
+          <a href="Work/CAPREIT/index.html" class="Attribute">
+            <h2>
+              CAPREIT
+            </h2>
+            <img src="Work/CAPREIT/Logo.jpg">
+          </a>
+      </div>
+      <div class="Section">
+          <a href="Work/CTWorkshop//index.html" class="Attribute">
+            <h2>
+              Childern's Technology<br>Workshop
+            </h2>
+            <img src="Work/CTWorkshop/Logo.png">
+          </a>
+      </div>
+	</div>
 </div>
 <div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
