--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Do the following if you're using your customized build of modernizr (http://www.
             <h2>
               THALES<br>Transportation Canada
             </h2>
-            <img src="Work/THALES/Logo.jpg">
+            <img src="Work/THALES/Logo.gif">
           </a>
           <a href="Work/CAPREIT/index.html" class="Attribute">
             <h2>
