changed images in home page to gif

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Do the following if you're using your customized build of modernizr (http://www.
             <h2>
               CAPREIT
             </h2>
-            <img src="Work/CAPREIT/Logo.jpg">
+            <img src="Work/CAPREIT/Logo.gif">
           </a>
       </div>
       <div class="Section">
