building new site

--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
+<!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
+<!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="">
+<!--<![endif]-->
+
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Title of the document</title>
+	<meta charset="UTF-8">
+	<title>Prakhar Garg | About Me</title>
+	<link href="HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
+	<link href="index.css" rel="stylesheet" type="text/css">
+	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
+	<script src="HorizontalMenuBar/index.js"></script>
+	<script src="populate.js"></script>
+
+
 </head>
 
-<body>
-Content of the document......
+
+
+
+
+<body onload='addMenubar(); pullWorkExperience(); pullInterests();'>
+	<div name="AboutMe" class="Block" id="AboutMeText">
+		<div class="Title"><h1> About Me </h1></div>
+		<div class="Text">
+			<p>I am a student of McMaster University, studying Mechatronics Engineering. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p></div>
+		</div>
+	</div>
+	<div name="Education" class="Block" id="Education">
+		<div class="Title"><h1>Education</h1></div>
+		<div></div>
+	</div>
+	<div name="Work" class="Block" id="Work">
+		<div class="Title"><h1>Work Experience</h1></div>
+		<div></div>
+	</div>
+	<div name="Interests" class="Block" id="Interests">
+		<div class="Title"><h1>Interests</h1></div>
+		<div></div>
+	</div>
+	<div name="Projects" class="Block" id="Projects">
+		<div class="Title"><h1>Projects</h1></div>
+		<div></div>
+	</div>
+
+
+
+
+<p>Content of the document......</p>
 </body>
 
 </html>
