lots of style changes to the tiles

--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -23,7 +23,7 @@
 
 
 
-<body onload='addMenubar(); pullWorkExperience(); pullInterests(); pullProjects();'>
+<body onload='addMenubar(); pullEducation(); pullWorkExperience(); pullInterests(); pullProjects();'>
 	<div name="AboutMe" class="Block" id="AboutMeText">
 		<div class="Title"><h1> About Me </h1></div>
 		<div class="Text">
