show more/less buttons work now

--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -15,6 +15,7 @@
 	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
+	<!-- <script src="listeners.js" defer></script> -->
 
 
 </head>
