--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -13,9 +13,10 @@
 	<link href="HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="adjustments.css" rel="stylesheet" type="text/css">
+	<link href="fluid.css" rel="stylesheet" type="text/css">
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
-	<!-- <script src="listeners.js" defer></script> -->
 
 
 </head>
