--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -27,10 +27,8 @@
 
 <body onload=' addMenubar(); pullEducation(); pullWorkExperience(); pullInterests(); pullProjects(); pullCommunity(); pullContact();'>
 	<div name="AboutMe" class="Block container jumbotron" id="AboutMeText">
-		<div class="Title"><h1> About Me </h1></div>
-		<div class="Text">
-			<p>I am a student of McMaster University, studying Mechatronics Engineering. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p></div>
-		</div>
+		<h1>Prakhar Garg</h1>
+		<p>I am currently pursuing a Masters of Applied Science at McMaster Universoty, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
 	</div>
 	<div name="Education" class="Block container" id="Education">
 		<div class="Title"><h1>Education</h1></div>
