--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -17,7 +17,10 @@
 	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
-<link href="bootstrap.css" rel="stylesheet" type="text/css">
+
+	<link href="bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
 
