update some icons

--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -28,27 +28,27 @@
 
 
 
-<body onload=' addMenubar(); pullEducation(); pullWorkExperience(); pullInterests(); pullProjects(); pullCommunity(); pullContact();'>
-	<div name="AboutMe" class="Block container jumbotron" id="AboutMeText">
+<body onload=' addMenubar(); populate()'>
+	<div name="AboutMe" class="Block container-fluid jumbotron" id="AboutMeText">
 		<h1>Prakhar Garg</h1>
 		<p>I am currently pursuing a Masters of Applied Science at McMaster Universoty, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
 	</div>
-	<div name="Education" class="Block container" id="Education">
+	<div name="Education" class="Block container-fluid" id="Education">
 		<div class="Title"><h1>Education</h1></div>
 	</div>
-	<div name="Work" class="Block container" id="Work">
+	<div name="Work" class="Block container-fluid" id="Work">
 		<div class="Title"><h1>Work Experience</h1></div>
 	</div>
-	<div name="Interests" class="Block container" id="Interests">
+	<div name="Interests" class="Block container-fluid" id="Interests">
 		<div class="Title"><h1>Interests</h1></div>
 	</div>
-	<div name="Projects" class="Block container" id="Projects">
+	<div name="Projects" class="Block container-fluid" id="Projects">
 		<div class="Title"><h1>Projects</h1></div>
 	</div>
-	<div name="Community" class="Block container" id="Community">
+	<div name="Community" class="Block container-fluid" id="Community">
 		<div class="Title"><h1>Community</h1></div>
 	</div>
-	<div name="Contact" class="Block container" id="Contact">
+	<div name="Contact" class="Block container-fluid" id="Contact">
 		<div class="Title"><h1>Contact</h1></div>
 	</div>
 
