--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -36,26 +36,37 @@
 	<div name="Education" class="Block container-fluid" id="Education">
 		<div class="Title"><h1>Education</h1></div>
 	</div>
+	<hr/>
 	<div name="Work" class="Block container-fluid" id="Work">
 		<div class="Title"><h1>Work Experience</h1></div>
 	</div>
+	<hr/>
 	<div name="Interests" class="Block container-fluid" id="Interests">
 		<div class="Title"><h1>Interests</h1></div>
 	</div>
+	<hr/>
 	<div name="Projects" class="Block container-fluid" id="Projects">
 		<div class="Title"><h1>Projects</h1></div>
 	</div>
+	<hr/>
 	<div name="Community" class="Block container-fluid" id="Community">
 		<div class="Title"><h1>Community</h1></div>
 	</div>
-	<div name="Contact" class="Block container-fluid" id="Contact">
-		<div class="Title"><h1>Contact</h1></div>
-	</div>
+	<hr/>
+	<footer class="Block container">
+		<div class="row">
+			<div name="Contact" class="Block col-sm-5" id="Contact">
+				<div class="Title"><h2>Contact</h2></div>
+			</div>
+			<div name="Credits" class="Block col-sm" id="Contact">
+				<h2>Credits</h2>
+				<p>
+					I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. All the content displayed on this website, with the exception to the logos of the organisations, companies and competitions, have been created by me with the exception of the photo of myself which was curtsey of Alpha Creation Studios. I however could not have accomplished this without the support of my friends, family and mentors.
+				</p>
+			</div>
+		</div>
+	</footer>
 
-
-
-
-<p>Content of the document......</p>
 </body>
 
 </html>
