still not working

--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -28,7 +28,7 @@
 
 
 
-<body onload=' addMenubar(); populate();'>
+<body onload=' addMenubar(); populatesite();'>
 	<div name="AboutMe" class="Block container-fluid jumbotron" id="AboutMeText">
 		<h1>Prakhar Garg</h1>
 		<p>I am currently pursuing a Masters of Applied Science at McMaster Universoty, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
