--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -15,6 +15,7 @@
 	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
 	<link href="fluid.css" rel="stylesheet" type="text/css"> -->
 	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="adjustments.css" rel="stylesheet" type="text/css">
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
 
