--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -19,6 +19,7 @@
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="bootstrap.css" rel="stylesheet" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="bootstrap-4.5.0-dist/js/bootstrap.js"></script>
