--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -9,19 +9,27 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Prakahr Garg's portfolio website">
+	<meta name="author" content="Prakhar Garg">
+	
 	<title>Prakhar Garg | About Me</title>
-<!--	<link href="HorizontalMenuBar/index.css" rel="stylesheet" type="text/css">
-	<link href="index.css" rel="stylesheet" type="text/css">
-	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="fluid.css" rel="stylesheet" type="text/css"> -->
-	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="adjustments.css" rel="stylesheet" type="text/css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="assets/data/sitemap.js"></script>
+
+
+	<!-- Building the site -->
 	<script src="HorizontalMenuBar/index.js"></script>
 	<script src="populate.js"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Event Handlers -->
+	<script src="HorizontalMenuBar/updateHome.js"></script>
+
+	<!-- Styling -->
+	<link href="gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="adjustments.css" rel="stylesheet" type="text/css">
 	<link href="bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
@@ -31,36 +39,36 @@
 
 
 <body onload=' addMenubar(); populatesite();'>
-	<div name="AboutMe" class="Block container-fluid jumbotron" id="AboutMeText">
+	<div name="AboutMe" class="container-fluid jumbotron" id="AboutMeText">
 		<h1>Prakhar Garg</h1>
 		<p>I am currently pursuing a Masters of Applied Science at McMaster Universoty, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
 	</div>
-	<div name="Education" class="Block container-fluid" id="Education">
+	<div name="Education" class="container-fluid" id="Education">
 		<div class="Title"><h1>Education</h1></div>
 	</div>
 	<hr/>
-	<div name="Work" class="Block container-fluid" id="Work">
+	<div name="Work" class="container-fluid" id="Work">
 		<div class="Title"><h1>Work Experience</h1></div>
 	</div>
 	<hr/>
-	<div name="Interests" class="Block container-fluid" id="Interests">
+	<div name="Interests" class="container-fluid" id="Interests">
 		<div class="Title"><h1>Interests</h1></div>
 	</div>
 	<hr/>
-	<div name="Projects" class="Block container-fluid" id="Projects">
+	<div name="Projects" class="container-fluid" id="Projects">
 		<div class="Title"><h1>Projects</h1></div>
 	</div>
 	<hr/>
-	<div name="Community" class="Block container-fluid" id="Community">
+	<div name="Community" class="container-fluid" id="Community">
 		<div class="Title"><h1>Community</h1></div>
 	</div>
 	<hr/>
-	<footer class="Block container">
+	<footer class="container">
 		<div class="row">
-			<div name="Contact" class="Block col-sm-5" id="Contact">
+			<div name="Contact" class="col-sm-5" id="Contact">
 				<div class="Title"><h2>Contact</h2></div>
 			</div>
-			<div name="Credits" class="Block col-sm" id="Contact">
+			<div name="Credits" class="col-sm" id="Contact">
 				<h2>Credits</h2>
 				<p>
 					I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. All the content displayed on this website, with the exception to the logos of the organisations, companies and competitions, have been created by me with the exception of the photo of myself which was curtsey of Alpha Creation Studios. I however could not have accomplished this without the support of my friends, family and mentors.
