--- a/NewSite/Education/bachlors/index.html
+++ b/NewSite/Education/bachlors/index.html
@@ -27,7 +27,6 @@
 
 	<!-- Styling -->
 	<link href="http://prakhargarg.me/NewSite/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/NewSite/adjustments.css" rel="stylesheet" type="text/css">
 	<link href="http://prakhargarg.me/NewSite/bootstrap.css" rel="stylesheet" type="text/css">
 	<script src="http://prakhargarg.me/NewSite/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
@@ -38,29 +37,42 @@
 
 
 <body onload=' addMenubar();'>
-	<div name="" class="container-fluid " id="">
-		<h1>Masters of Applied Science</h1>
-		<p>I have my Bachlors in Engineerign with Management and COOP. THe program allowed me to learn a lot about the synergistic integration of the main categories of engineering. </p>
+	<div name="" class="container-fluid jumbotron" id="Intro">
+		<h1>Engineering and Management with COOP</h1>
+		<p>I have my Bachlors in Engineering with Management and COOP. The program allowed me to learn a lot about the synergistic integration of the main categories of engineering. </p>
 	</div>
-	<div name="" class="container-fluid " id="">
-		<h2>Courses of Interest</h2>
-		<ul>
-			<li>Mechatronics Capstone</li>
-			<li>Distributed Systems</li>
-			<li>Product Development</li>
-			<li>Engineering Ethics</li>
-			<li>Management of High Tech firms</li>
-		</ul>
+	<div name="" class="container-fluid " id="Details">
+		<div class="container">
+		  <div class="row">
+		    <div class="col-sm">
+		    	<h2>Courses of Interest</h2>
+				<ul>
+					<li>Mechatronics Capstone</li>
+					<li>Distributed Systems</li>
+					<li>Product Development</li>
+					<li>Engineering Ethics</li>
+					<li>Management of High Tech firms</li>
+				</ul>
+				<h2>Topics Explored</h2>
+				<ul>
+					<li>Hybrid Vehicles</li>
+					<li>FPGAs</li>
+					<li>Mechatronic systems</li>
+					<li>Documentation</li>
+				</ul>
+		    </div>
+		    <div class="col-sm">
+				<div  class="grid-container container" id="Images-grid-container">
+					<img class="priority1 hiddenfalse" src="">
+				</div>
+		    </div>
+		  </div>
+		</div>
+
+
+
 	</div>
-	<div name="" class="container-fluid " id="">
-		<h2>Topics Explored</h2>
-		<ul>
-			<li>Hybrid Vehicles</li>
-			<li>FPGAs</li>
-			<li>Mechatronic systems</li>
-			<li>Documentation</li>
-		</ul>
-	</div>
+	
 </body>
 
 </html>
