--- a/NewSite/Education/webdesign/index.html
+++ b/NewSite/Education/webdesign/index.html
@@ -27,7 +27,6 @@
 
 	<!-- Styling -->
 	<link href="http://prakhargarg.me/NewSite/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/NewSite/adjustments.css" rel="stylesheet" type="text/css">
 	<link href="http://prakhargarg.me/NewSite/bootstrap.css" rel="stylesheet" type="text/css">
 	<script src="http://prakhargarg.me/NewSite/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
@@ -38,28 +37,38 @@
 
 
 <body onload=' addMenubar();'>
-	<div name="" class="container-fluid " id="">
-		<h1>Masters of Applied Science</h1>
-		<p>I am currently pursuing a Masters of Applied Science at McMaster University, studying in the Estimation Tracking and Fusion lab.</p>
+	<div name="" class="container-fluid jumbotron" id="Intro">
+		<h1>Web Development</h1>
+		<p>During the summer while on coop. I took some courses at Ryerson Chang School in the evenings to learn the basics of web design. It is common to learn web design through resources on the internet but i found it very usefull to be taught by professional developers. It was very helpfull to learn about how things work and are interpreted in a classroom.</p>
 	</div>
-	<div name="" class="container-fluid " id="">
-		<h2>Courses of Interest</h2>
-		<ul>
-			<li>State Estimation</li>
-			<li>Radar Systems</li>
-			<li>Target Tracking and Fusion</li>
-			<li>Optimisation</li>
-		</ul>
+	<div name="" class="container-fluid " id="Details">
+		<div class="container">
+		  <div class="row">
+		    <div class="col-sm">
+		    	<h2>Courses of Interest</h2>
+				<ul>
+					<li>Introduction to web design</li>
+				</ul>
+				<h2>Topics Explored</h2>
+				<ul>
+					<li>HTML5</li>
+					<li>CSS</li>
+					<li>Javascript</li>
+					<li>Design</li>
+				</ul>
+		    </div>
+		    <div class="col-sm">
+				<div  class="grid-container container" id="Images-grid-container">
+					<img class="priority1 hiddenfalse" src="">
+				</div>
+		    </div>
+		  </div>
+		</div>
+
+
+
 	</div>
-	<div name="" class="container-fluid " id="">
-		<h2>Topics Explored</h2>
-		<ul>
-			<li>Submarine Detection</li>
-			<li>Quantum Computing/li>
-			<li>Machine Learning</li>
-			<li>Small Target Detection</li>
-		</ul>
-	</div>
+	
 </body>
 
 </html>
