changes to gdms

--- a/NewSite/Work/gdms/index.html
+++ b/NewSite/Work/gdms/index.html
@@ -38,15 +38,16 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1>General Dynamics Mission System Canada</h1>
+		<h1>Software Developer - COOP</h1>
+		<p class="lead">General Dynamics Mission System Canada</p>
 		<p class="lead">2019</p>
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
-<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
-<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
-<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
+				<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
+				<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
+				<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
+				<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
 			</ul>
 		</div>
 	</div>
@@ -69,7 +70,7 @@
 		    </div>
 		    <div class="col-sm-4">
 				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="Logo.gif">
+					<img class="priority1 hiddenfalse" src="gdmslogo.jpg">
 				</div>
 		    </div>
 		  </div>
@@ -77,7 +78,14 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>Working at THALS was an amazing experience. Working in the Research and Development department, I have learned a lot about how large firms begin new software projects and what goes into mintaining prexisting software.</p>
+		<p>General Dynamics was a verry interesting coop for me. It was the furthest
+		 away for home i had to travel for work. The entire experience from living to 
+		 workpace culture was verry different from my past. I was a part of a very young
+		 and motivated team responsible for maintaining code running on one of Canada's 
+		 survailence aircrafts. Being a part of a firm that deals with controlled goods,
+		 I also got to learn a lot about how should be kept secure. Special notice was
+		 also given to documentation as a lot of the changes made would impact the 
+		 product for decades.</p>
 	</div>
 	
 </body>
