styled the main page

--- a/NewSite/Work/mcmasterTA/index.html
+++ b/NewSite/Work/mcmasterTA/index.html
@@ -38,16 +38,27 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1 id="jobtitle">Software Developer - COOP</h1>
-		<p class="lead float-right" id="date">2019</p>
-		<p class="lead" id="company">General Dynamics Mission System Canada</p>
+		<h1 id="jobtitle">Teaching Assistant</h1>
+		<p class="lead float-right" id="date">2018-2020</p>
+		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
-				<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
-				<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
-				<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
+				<li>Provide formal supervision to students.</li>
+				<li>Coordinate curriculum with other teaching assistants that is to be covered in tutorial sessions.</li>
+				<li>Introduce and demonstrate labs or tutorial sessions to students.</li>
+				<li>Tutor students in programs and assist students with lab work.</li>
+				<li>Train students on proper lab techniques, operating laboratory equipment.</li>
+				<li>Ensuring that the appropriate course content information is made available to students.</li>
+				<li>Provide guidance, advice, and solutions to students.</li>
+				<li>Ensure accurate grading of assignments, tests and exams.</li>
+				<li>Correspond and meet with students to address concerns related to the course including, but not limited to, the resolution of contested grades.</li>
+				<li>Liaise with instructors and students to ensure information within the academic unit is understood by all parties.</li>
+				<li>Operate, adjust, and maintain a variety of equipment and instruments.</li>
+				<li>Troubleshoot equipment and perform minor repairs. Ensure major repair requests are escalated to the appropriate area.</li>
+				<li>Collect, track, and safeguard student marks and tests.</li>
+				<li>Calculate student marks and submit final grades to appropriate areas.</li>
+				<li>Input, maintain, and verify information in a variety of databases and spreadsheets.</li>
 			</ul>
 		</div>
 	</div>
@@ -58,23 +69,24 @@
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li>Robot Framework</li>
-						<li>ADA</li>
-						<li>Interporation</li>
-						<li>Web Development</li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
 					</ul>
 				</div>
 				<div id="gsf">
 					<h2>Goals, Success Factors</h2>
 					<ul>
-						<li>Deliver an easy to read dashboard</li>
-						<li>Assist develop succesful test algorithms</li>
+						<li></li>
 					</ul>
 				</div>
 		    </div>
 		    <div class="col-sm-4">
 				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="gdmslogo.jpg">
+					<img class="priority1 hiddenfalse" src="">
 				</div>
 		    </div>
 		  </div>
@@ -82,14 +94,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>General Dynamics was a verry interesting coop for me. It was the furthest
-		 away for home i had to travel for work. The entire experience from living to 
-		 workpace culture was verry different from my past. I was a part of a very young
-		 and motivated team responsible for maintaining code running on one of Canada's 
-		 survailence aircrafts. Being a part of a firm that deals with controlled goods,
-		 I also got to learn a lot about how should be kept secure. Special notice was
-		 also given to documentation as a lot of the changes made would impact the 
-		 product for decades.</p>
+		<p></p>
 	</div>
 	
 </body>
