--- a/NewSite/Work/thales/index (copy).html
+++ b/NewSite/Work/thales/index (copy).html
@@ -38,16 +38,18 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1 id="jobtitle">Software Developer - COOP</h1>
-		<p class="lead float-right" id="date">2019</p>
-		<p class="lead" id="company">General Dynamics Mission System Canada</p>
+		<h1>THALES Canada</h1>
+		<p class="lead">2016-2017</p>
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
-				<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
-				<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
-				<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
+				<li>Worked in an exclusive team tasked to reduce product testing times by 80%</li>
+				<li>Work with a team to develop tools and practices to automate software system and subsystem level tests for automated trains.</li>
+				<li>Develop, maintain and debug the Automated Testing software using C++</li>
+				<li>Design and develop a new graphincal, web based solution to generate automated test procedures</li>
+				<li>Train teaters on how to use Automted Testing Tools</li>
+				<li>Work with the users to take feedback and continue improving the automated testing</li>
+				<li>Accurately document all changes to sotware while following company procedure</li>
 			</ul>
 		</div>
 	</div>
@@ -55,26 +57,22 @@
 		<div class="container">
 		  <div class="row">
 		    <div class="col-sm">
-		    	<div id="ksa">
-					<h2>Knowledge, Skills and Abillities</h2>
-					<ul>
-						<li>Robot Framework</li>
-						<li>ADA</li>
-						<li>Interporation</li>
-						<li>Web Development</li>
-					</ul>
-				</div>
-				<div id="gsf">
-					<h2>Goals, Success Factors</h2>
-					<ul>
-						<li>Deliver an easy to read dashboard</li>
-						<li>Assist develop succesful test algorithms</li>
-					</ul>
-				</div>
+				<h2>Knowledge, Skills and Abillities</h2>
+				<ul>
+					<li>Knowledge of the software debelopment process</li>
+					<li>Experience working with and troubleshooting c++ and JavaScript.</li>
+					<li>Excillent comunication and organisational skills</li>
+				</ul>
+				<h2>Goals, Success Factors</h2>
+				<ul>
+					<li>Completion of assigned tasks in a timely manner</li>
+					<li>Ability to manage competing deadlines</li>
+					<li>Creating designing an untuative UX for the automation process</li>
+				</ul>
 		    </div>
 		    <div class="col-sm-4">
 				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="gdmslogo.jpg">
+					<img class="priority1 hiddenfalse" src="Logo.gif">
 				</div>
 		    </div>
 		  </div>
@@ -82,14 +80,10 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>General Dynamics was a verry interesting coop for me. It was the furthest
-		 away for home i had to travel for work. The entire experience from living to 
-		 workpace culture was verry different from my past. I was a part of a very young
-		 and motivated team responsible for maintaining code running on one of Canada's 
-		 survailence aircrafts. Being a part of a firm that deals with controlled goods,
-		 I also got to learn a lot about how should be kept secure. Special notice was
-		 also given to documentation as a lot of the changes made would impact the 
-		 product for decades.</p>
+		<p>Working at THALS was an amazing experience. Working in
+		 the Research and Development department, I have learned a
+		 lot about how large firms begin new software projects and
+		 what goes into mintaining prexisting software.</p>
 	</div>
 	
 </body>
